// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewModal component component snapshots closed 1`] = `
<FullscreenModal
  afterBodyNode={null}
  beforeBodyNode={
    <React.Fragment>
      <ReviewActions />
      <DemoWarning />
    </React.Fragment>
  }
  className="review-modal"
  closeLabel="Close"
  footerNode={null}
  hasCloseButton={true}
  isFullscreenScroll={false}
  isOpen={false}
  modalBodyClassName="review-modal-body"
  onClose={[MockFunction hooks.onClose]}
  size="fullscreen"
  title="test-ora-name"
  variant="dark"
>
  <CloseReviewConfirmModal
    prop="hooks.closeConfirmModalProps"
  />
</FullscreenModal>
`;

exports[`ReviewModal component component snapshots loading 1`] = `
<FullscreenModal
  afterBodyNode={null}
  beforeBodyNode={
    <React.Fragment>
      <ReviewActions />
      <DemoWarning />
    </React.Fragment>
  }
  className="review-modal"
  closeLabel="Close"
  footerNode={null}
  hasCloseButton={true}
  isFullscreenScroll={false}
  isOpen={true}
  modalBodyClassName="review-modal-body"
  onClose={[MockFunction hooks.onClose]}
  size="fullscreen"
  title="test-ora-name"
  variant="dark"
>
  <ReviewContent />
  <LoadingMessage
    message={
      Object {
        "defaultMessage": "Loading response",
        "description": "loading text for submission response review screen",
        "id": "ora-grading.ReviewModal.loadingResponse",
      }
    }
  />
  <CloseReviewConfirmModal
    prop="hooks.closeConfirmModalProps"
  />
</FullscreenModal>
`;

exports[`ReviewModal component component snapshots success 1`] = `
<FullscreenModal
  afterBodyNode={null}
  beforeBodyNode={
    <React.Fragment>
      <ReviewActions />
      <DemoWarning />
    </React.Fragment>
  }
  className="review-modal"
  closeLabel="Close"
  footerNode={null}
  hasCloseButton={true}
  isFullscreenScroll={false}
  isOpen={true}
  modalBodyClassName="review-modal-body"
  onClose={[MockFunction hooks.onClose]}
  size="fullscreen"
  title="test-ora-name"
  variant="dark"
>
  <ReviewContent />
  <CloseReviewConfirmModal
    prop="hooks.closeConfirmModalProps"
  />
</FullscreenModal>
`;
